--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,11 @@ description = "x86 Virtual Local APIC"
 
 [dependencies]
 log = "0.4.19"
+paste = "1.0.15"
+tock-registers = "0.9.0"
+
 memory_addr = "0.3"
 axerrno = "0.1.0"
-paste = "1.0.15"
 
 axaddrspace = { git = "https://github.com/arceos-hypervisor/axaddrspace.git" }
 axdevice_base = { git = "https://github.com/arceos-hypervisor/axdevice_crates.git"}
