[fix] update url

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,11 +12,11 @@ tock-registers = "0.9.0"
 memory_addr = "0.3"
 axerrno = "0.1.0"
 
-axaddrspace = { git = "https://github.com/arceos-hypervisor/axaddrspace.git" }
-axdevice_base = { git = "https://github.com/arceos-hypervisor/axdevice_crates.git"}
+axaddrspace = { git = "https://github.com/arceos-hypervisor/axaddrspace.git", branch = "inject_interrupt" }
+axdevice_base = { git = "https://github.com/arceos-hypervisor/axdevice_crates.git", branch = "inject_interrupt"}
 
-[patch."https://github.com/arceos-hypervisor/axaddrspace.git"]
-axaddrspace = { path = "../axaddrspace" }
+# [patch."https://github.com/arceos-hypervisor/axaddrspace.git"]
+# axaddrspace = { path = "../axaddrspace" }
 
-[patch."https://github.com/arceos-hypervisor/axdevice_crates.git"]
-axdevice_base = { path = "../axdevice_crates/axdevice_base" }
+# [patch."https://github.com/arceos-hypervisor/axdevice_crates.git"]
+# axdevice_base = { path = "../axdevice_crates/axdevice_base" }
