[feat] add lvt regs (#1)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,15 +6,17 @@ description = "x86 Virtual Local APIC"
 
 [dependencies]
 log = "0.4.19"
+paste = "1.0.15"
+tock-registers = "0.9.0"
+
 memory_addr = "0.3"
 axerrno = "0.1.0"
-paste = "1.0.15"
 
-axaddrspace = { git = "https://github.com/arceos-hypervisor/axaddrspace.git" }
-axdevice_base = { git = "https://github.com/arceos-hypervisor/axdevice_crates.git"}
+axaddrspace = { git = "https://github.com/arceos-hypervisor/axaddrspace.git", branch = "inject_interrupt" }
+axdevice_base = { git = "https://github.com/arceos-hypervisor/axdevice_crates.git", branch = "inject_interrupt"}
 
-[patch."https://github.com/arceos-hypervisor/axaddrspace.git"]
-axaddrspace = { path = "../axaddrspace" }
+# [patch."https://github.com/arceos-hypervisor/axaddrspace.git"]
+# axaddrspace = { path = "../axaddrspace" }
 
-[patch."https://github.com/arceos-hypervisor/axdevice_crates.git"]
-axdevice_base = { path = "../axdevice_crates/axdevice_base" }
+# [patch."https://github.com/arceos-hypervisor/axdevice_crates.git"]
+# axdevice_base = { path = "../axdevice_crates/axdevice_base" }
