--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ description = "x86 Virtual Local APIC"
 log = "0.4.19"
 paste = "1.0.15"
 tock-registers = "0.9.0"
+bit = "0.1.1"
 
 memory_addr = "0.3"
 axerrno = "0.1.0"
