--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,13 @@ axerrno = "0.1.0"
 axaddrspace = { git = "https://github.com/arceos-hypervisor/axaddrspace.git", branch = "inject_interrupt" }
 axdevice_base = { git = "https://github.com/arceos-hypervisor/axdevice_crates.git", branch = "inject_interrupt"}
 
+axvisor_api = { git = "https://github.com/arceos-hypervisor/axvisor_api.git" }
+
 # [patch."https://github.com/arceos-hypervisor/axaddrspace.git"]
 # axaddrspace = { path = "../axaddrspace" }
 
-# [patch."https://github.com/arceos-hypervisor/axdevice_crates.git"]
-# axdevice_base = { path = "../axdevice_crates/axdevice_base" }
+[patch."https://github.com/arceos-hypervisor/axdevice_crates.git"]
+axdevice_base = { path = "../axdevice_crates/axdevice_base" }
+
+[patch."https://github.com/arceos-hypervisor/axvisor_api.git"]
+axvisor_api = { path = "../axvisor_api" }
