--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ bit = "0.1.1"
 memory_addr = "0.3"
 axerrno = "0.1.0"
 
-axaddrspace = { git = "https://github.com/arceos-hypervisor/axaddrspace.git", branch = "api" }
-axdevice_base = { git = "https://github.com/arceos-hypervisor/axdevice_crates.git", branch = "api"}
+axaddrspace = { git = "https://github.com/arceos-hypervisor/axaddrspace.git" }
+axdevice_base = { git = "https://github.com/arceos-hypervisor/axdevice_crates.git", branch = "inject_interrupt" }
 
-axvisor_api = { git = "https://github.com/arceos-hypervisor/axvisor_api.git" }
+axvisor_api = { git = "https://github.com/arceos-hypervisor/axvisor_api.git", branch = "inject_interrupt" }
