A simple but working virtual local APIC timer. (#3)
* [wip] on lapic timer

* [wip] in in handle_write

* [wip] in write_icr

* [wip] finish partial icr_write

* [wip] calculate_dest

* make timer somewhat and somehow work

* migrate to `api` branch of `axaddrspace` and `axdevice_base`

* remove generic parameters completely

* update dependency version

* use main-branch (merged) `axdevice_base` and `axvisor_api`

* formatted

* allow `clippy::mut_from_ref` on `get_mut_vlapic_regs`

* replace `u32` operations with `LvtTimerRegisterLocal` in timer

* import `arceos_api::<mod>` to reduce code length

* update parameters type

* formatted

---------

Co-authored-by: hky1999 <976929993@qq.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,11 +13,7 @@ bit = "0.1.1"
 memory_addr = "0.3"
 axerrno = "0.1.0"
 
-axaddrspace = { git = "https://github.com/arceos-hypervisor/axaddrspace.git", branch = "inject_interrupt" }
-axdevice_base = { git = "https://github.com/arceos-hypervisor/axdevice_crates.git", branch = "inject_interrupt"}
+axaddrspace = { git = "https://github.com/arceos-hypervisor/axaddrspace.git" }
+axdevice_base = { git = "https://github.com/arceos-hypervisor/axdevice_crates.git" }
 
-# [patch."https://github.com/arceos-hypervisor/axaddrspace.git"]
-# axaddrspace = { path = "../axaddrspace" }
-
-# [patch."https://github.com/arceos-hypervisor/axdevice_crates.git"]
-# axdevice_base = { path = "../axdevice_crates/axdevice_base" }
+axvisor_api = { git = "https://github.com/arceos-hypervisor/axvisor_api.git" }
