--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        rust-toolchain: [nightly]
+        rust-toolchain: [nightly-2025-05-20, nightly]
         targets: [x86_64-unknown-none]
     steps:
     - uses: actions/checkout@v4
@@ -25,9 +25,28 @@ jobs:
       run: cargo clippy --target ${{ matrix.targets }} --all-features -- -A clippy::new_without_default
     - name: Build
       run: cargo build --target ${{ matrix.targets }} --all-features
+    - name: Check documentation
+      run: cargo doc --target ${{ matrix.targets }} --all-features --no-deps
+      env:
+        RUSTDOCFLAGS: "-D rustdoc::broken_intra_doc_links -D missing-docs"
+
+  unit_test:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        rust-toolchain: [nightly-2025-05-20, nightly]
+        targets: [x86_64-unknown-linux-gnu]
+    steps:
+    - uses: actions/checkout@v4
+    - uses: dtolnay/rust-toolchain@nightly
+      with:
+        toolchain: ${{ matrix.rust-toolchain }}
+        components: rust-src
+    - name: Check rust version
+      run: rustc --version --verbose
     - name: Unit test
-      if: ${{ matrix.targets == 'x86_64-unknown-linux-gnu' }}
-      run: cargo test --target ${{ matrix.targets }} -- --nocapture
+      run: cargo test --target ${{ matrix.targets }} --all-features -- --nocapture
 
   doc:
     runs-on: ubuntu-latest
@@ -41,6 +60,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - uses: dtolnay/rust-toolchain@nightly
+      with:
+        toolchain: nightly-2025-05-20
     - name: Build docs
       continue-on-error: ${{ github.ref != env.default-branch && github.event_name != 'pull_request' }}
       run: |
