--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ bit = "0.1.1"
 memory_addr = "0.4"
 axerrno = "0.1.0"
 
-axaddrspace = { git = "https://github.com/arceos-hypervisor/axaddrspace.git" }
+axaddrspace = "0.1"
 axdevice_base = { git = "https://github.com/arceos-hypervisor/axdevice_crates.git" }
 
-axvisor_api = { git = "https://github.com/arceos-hypervisor/axvisor_api.git" }
+axvisor_api = "0.1"
